--- a/src/app/index.html
+++ b/src/app/index.html
@@ -11,6 +11,9 @@
 
     <!--App scripts-->
     <script src="./app.js"></script>
+    <script src="./components/order/Order.service.js"></script>
     <script src="./main/main.controller.js"></script>
+    <script src="./selectPizza/SelectPizza.controller.js"></script>
+    <script src="./selectPizza/orderStatus.controller.js"></script>
   </body>
 </html>
