added an accordion directive

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -12,8 +12,9 @@
     <!--App scripts-->
     <script src="./app.js"></script>
     <script src="./components/order/Order.service.js"></script>
+    <script src="./components/accordion/accordion.directive.js"></script>
     <script src="./main/main.controller.js"></script>
     <script src="./selectPizza/SelectPizza.controller.js"></script>
-    <script src="./selectPizza/orderStatus.controller.js"></script>
+    <script src="./orderStatus/orderStatus.controller.js"></script>
   </body>
 </html>
